# tren-test-split

./: LICENSE  README.md  pyproject.toml  strategy.py  submission.csv
data/csv/: train_headlines_seen.csv  train_headlines_unseen.csv  train_seen.csv  train_unseen.csv
